objects/Badge__c.object
<CustomObject>
    <fields>
        <fullName>Badge_Label__c</fullName>
        <label>Badge Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancel_Reason__c</fullName>
        <label>Cancel Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stolen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forgot</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Eff_time__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Eff_time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Exp_time__c</fullName>
        <label>Exp time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Print_status__c</fullName>
        <label>Print status</label>
        <picklist>
            <picklistValues>
                <fullName>Printed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Not Printed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>cancel_time__c</fullName>
        <label>cancel time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ticket_id__c</fullName>
        <label>ticket id</label>
        <referenceTo>Ticket__c</referenceTo>
        <relationshipName>badges</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>BLN Badge</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BDG-{0000000}</displayFormat>
        <label>Badge Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BLN Badges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>